load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

genrule(
    name = "headers_go_srcs",
    srcs = ["//src/cpp/stdlib:headers.csv"],
    outs = ["headers.gen.go"],
    cmd = "$(location //src/go/cpp/gen) $(location //src/cpp/stdlib:headers.csv)> $@",
    tools = ["//src/go/cpp/gen"],
)

go_library(
    name = "cpp",
    srcs = [
        "cpp.go",
        "headers.gen.go",
        "headers.go",
    ],
    importpath = "github.com/satreix/everest/src/go/cpp",
    visibility = ["//visibility:public"],
)

go_test(
    name = "cpp_test",
    size = "small",
    srcs = [
        "cpp_test.go",
        "headers_test.go",
    ],
    embed = [":cpp"],
)
