load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "feedly_lib",
    srcs = [
        "api.go",
        "feedly.go",
        "feedly_darwin.go",
        "feedly_linux.go",
        "feedly_windows.go",
    ],
    importpath = "github.com/satreix/everest/src/go/feedly",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gosuri_uiprogress//:uiprogress",
        "@com_github_pkg_browser//:browser",
    ] + select({
        "@rules_go//go/platform:darwin": [
            "@com_github_keybase_go_keychain//:go-keychain",
        ],
        "@rules_go//go/platform:ios": [
            "@com_github_keybase_go_keychain//:go-keychain",
        ],
        "//conditions:default": [],
    }),
)

go_binary(
    name = "feedly",
    embed = [":feedly_lib"],
    visibility = ["//visibility:public"],
)
