load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "hello_world_lib",
    srcs = ["hello_world.go"],
    importpath = "github.com/satreix/everest/src/go/hello_world",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "hello_world",
    embed = [":hello_world_lib"],
    visibility = ["//visibility:public"],
)

load("//tools/test/binary:binary.bzl", "binary_test")

binary_test(
    name = "hello_world_test",
    binary = ":hello_world",
)
