load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "luhn",
    srcs = ["luhn.go"],
    importpath = "github.com/satreix/everest/src/go/luhn",
    visibility = ["//visibility:public"],
)

go_test(
    name = "luhn_test",
    size = "small",
    srcs = ["luhn_test.go"],
    embed = [":luhn"],
)
